# showgraph

./: .gitignore  README.md  interactive_graph.html  pyproject.toml  requirements.txt
app/: app.py  app_v2.py  create_default_graph.py
app/data/: random_graph.json
data/: default_graph.json
